--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "description": "a simple and naive greeter",
   "main": "index.js",
-  "bin" : { 
-	  "greet" : "./bin/greet.js" 
+  "bin": {
+    "greet": "./bin/greet.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [
     "hello-world"
   ],
   "author": "hym",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^1.10.0",
+    "mocha": "^2.1.0"
+  }
 }
