--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "greet",
   "version": "1.0.0",
   "description": "a simple and naive greeter",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "bin": {
     "greet": "./bin/greet.js"
   },
@@ -16,6 +16,7 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^1.10.0",
+    "coffee-script": "^1.8.0",
     "mocha": "^2.1.0"
   }
 }
